--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -32,6 +32,7 @@
     "no_connection_selected": "Ninguna conexión seleccionada",
     "select_or_create_connection": "Seleccione una conexión existente o cree una nueva para comenzar.",
     "connect": "Conectar",
+    "launch_rdp": "Abrir Escritorio Remoto",
     "edit": "Editar",
     "delete": "Eliminar",
     "delete_connection": "Eliminar Conexión",
@@ -43,7 +44,15 @@
     "deleted_success": "Eliminado con éxito",
     "docker": "Docker",
     "copy": "Copiar",
-    "copied": "Copiado al portapapeles"
+    "copied": "Copiado al portapapeles",
+    "no_available_connections": "No hay conexiones disponibles",
+    "expand": "Expandir",
+    "collapse": "Contraer",
+    "search_connections": "Buscar conexiones...",
+    "no_connections_yet": "Aún no hay conexiones",
+    "connection_deleted": "Conexión eliminada con éxito",
+    "active": "Activo",
+    "disconnect": "Desconectar"
   },
   "settings": {
     "stacks_directory": "Directorio de Stacks",
@@ -95,7 +104,10 @@
     "select_connection": "Seleccione una conexión",
     "select_connection_desc": "Seleccione una conexión para abrir una terminal.",
     "new_terminal": "Nueva Terminal",
-    "no_terminal_open": "Ninguna terminal abierta"
+    "no_terminal_open": "Ninguna terminal abierta",
+    "send_password": "Enviar Contraseña",
+    "password_sent": "Contraseña enviada al terminal",
+    "no_password_saved": "No hay contraseña guardada para esta conexión"
   },
   "files": {
     "select_connection": "Seleccione una conexión",
@@ -213,21 +225,34 @@
     "name": "Nombre de la Conexión",
     "name_placeholder": "Ej: Servidor Producción",
     "name_required": "Ingrese el nombre de la conexión",
+    "description": "Descripción",
+    "description_placeholder": "Descripción opcional...",
     "host": "Host",
     "host_placeholder": "192.168.1.100",
     "host_required": "Ingrese el host",
+    "port": "Puerto",
     "user": "Usuario",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Ingrese el usuario",
+    "connection_type": "Tipo de Conexión",
     "auth_method": "Método de Autenticación",
     "password": "Contraseña",
     "password_ssh": "Contraseña SSH",
+    "password_rdp": "Contraseña de Windows",
     "password_keep": "(deje en blanco para mantener)",
     "password_required": "Ingrese la contraseña",
     "private_key": "Clave Privada",
     "key_path": "Ruta de la Clave Privada",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "Ingrese la ruta de la clave",
+    "rdp_auth_method": "Autenticación RDP",
+    "rdp_credentials": "Credenciales Guardadas",
+    "rdp_windows_auth": "Autenticación Windows",
+    "domain": "Dominio",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "Se utilizará el usuario actualmente conectado en Windows para autenticar la conexión RDP.",
+    "rdp_test_not_available": "Prueba de conexión no disponible para RDP. La conexión será validada al conectar.",
     "auto_connect": "Conectar automáticamente al iniciar",
     "test_success": "¡Conexión probada con éxito!",
     "connection_updated": "¡Conexión actualizada con éxito!",
@@ -350,10 +375,16 @@
     "kill_error": "Error al terminar contenedor: {{message}}",
     "search_volumes": "Buscar...",
     "no_volumes_match": "No hay volúmenes que coincidan",
-    "volume_remove_not_implemented": "La eliminación de volúmenes aún no está implementada",
+    "volume_remove_confirm_title": "Eliminar Volumen",
+    "volumes_removed_count": "{{count}} volumen(es) eliminado(s) correctamente",
+    "volumes_remove_errors": "{{count}} volumen(es) fallaron al eliminar",
+    "volume_remove_selected_count": "{{count}} volumen(es) serán eliminados. Esta acción no se puede deshacer.",
     "search_networks": "Buscar...",
     "no_networks_match": "No hay redes que coincidan",
-    "network_remove_not_implemented": "La eliminación de redes aún no está implementada",
+    "network_remove_confirm_title": "Eliminar Red",
+    "network_remove_selected_count": "{{count}} red(es) serán eliminadas. Esta acción no se puede deshacer.",
+    "networks_removed_count": "{{count}} red(es) eliminada(s) correctamente",
+    "networks_remove_errors": "{{count}} red(es) fallaron al eliminar",
     "attachable": "Adjuntable",
     "ipam_driver": "Driver IPAM",
     "ipv4_subnet": "Subred IPV4",
@@ -369,6 +400,46 @@
     "no_stacks_match": "No hay stacks que coincidan",
     "stacks_load_error": "Error al cargar stacks",
     "search_stacks": "Buscar...",
-    "stack_remove_not_implemented": "La eliminación de stacks aún no está implementada"
+    "stack_remove_not_implemented": "La eliminación de stacks aún no está implementada",
+    "deploy": {
+      "new_deploy": "Nuevo Despliegue",
+      "title": "Desplegar Nueva Stack",
+      "stack_editor": "Editor de Stacks",
+      "stack_editor_desc": "Pegue el contenido de su docker-compose.yml abajo para desplegar una nueva stack.",
+      "quick_run": "Ejecución Rápida",
+      "quick_run_desc": "Pegue un comando docker run y lo convertiremos a una Stack Compose para facilitar la gestión.",
+      "stack_name": "Nombre de la Stack",
+      "stack_name_placeholder": "mi-app",
+      "stack_name_required": "El nombre de la stack es obligatorio",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "Formato YAML inválido",
+      "deploy": "Desplegar Stack",
+      "deploy_as_stack": "Desplegar como Stack",
+      "success": "¡Stack desplegada con éxito!",
+      "deploy_error": "Error al desplegar stack",
+      "docker_run_command": "Comando Docker Run",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "El comando docker run es obligatorio",
+      "invalid_docker_run": "Comando docker run inválido. Debe comenzar con 'docker run'.",
+      "convert": "Convertir a Compose",
+      "convert_error": "Error al convertir comando docker run",
+      "converted_compose": "Compose Convertido",
+      "use_in_editor": "Usar en Editor",
+      "no_compose_to_deploy": "No hay contenido compose para desplegar. Convierta un comando docker run primero.",
+      "deploy_directory": "Directorio de despliegue"
+    }
+  },
+  "rdp": {
+    "connecting": "Conectando al Escritorio Remoto...",
+    "connection_failed": "Error de Conexión",
+    "retry": "Reintentar",
+    "disconnect": "Desconectar",
+    "fullscreen": "Pantalla Completa",
+    "exit_fullscreen": "Salir de Pantalla Completa",
+    "settings": "Configuración",
+    "session_active": "Sesión RDP Activa",
+    "session_info": "La sesión de Escritorio Remoto se ha abierto en una ventana separada. Use el botón Desconectar para finalizar la sesión.",
+    "session_launched": "Sesión de Escritorio Remoto iniciada para {{name}}",
+    "launch_failed": "Error al iniciar Escritorio Remoto: {{error}}"
   }
 }
