--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -32,13 +32,27 @@
     "no_connection_selected": "Aucune connexion sélectionnée",
     "select_or_create_connection": "Sélectionnez une connexion existante ou créez-en une nouvelle pour commencer.",
     "connect": "Connecter",
+    "launch_rdp": "Ouvrir Bureau à Distance",
     "edit": "Modifier",
     "delete": "Supprimer",
     "delete_connection": "Supprimer Connexion",
     "confirm_delete_connection": "Êtes-vous sûr de vouloir supprimer la connexion \"{{name}}\" ?",
+    "confirm_delete": "Êtes-vous sûr de vouloir supprimer cet élément ?",
+    "search": "Rechercher",
+    "no_results": "Aucun résultat trouvé",
+    "error_loading_snippets": "Erreur lors du chargement des extraits",
+    "deleted_success": "Supprimé avec succès",
     "docker": "Docker",
     "copy": "Copier",
-    "copied": "Copié dans le presse-papiers"
+    "copied": "Copié dans le presse-papiers",
+    "no_available_connections": "Aucune connexion disponible",
+    "expand": "Développer",
+    "collapse": "Réduire",
+    "search_connections": "Rechercher des connexions...",
+    "no_connections_yet": "Pas encore de connexions",
+    "connection_deleted": "Connexion supprimée avec succès",
+    "active": "Actif",
+    "disconnect": "Déconnecter"
   },
   "settings": {
     "stacks_directory": "Répertoire des Stacks",
@@ -90,7 +104,10 @@
     "select_connection": "Sélectionnez une connexion",
     "select_connection_desc": "Sélectionnez une connexion pour ouvrir un terminal.",
     "new_terminal": "Nouveau Terminal",
-    "no_terminal_open": "Aucun terminal ouvert"
+    "no_terminal_open": "Aucun terminal ouvert",
+    "send_password": "Envoyer le Mot de Passe",
+    "password_sent": "Mot de passe envoyé au terminal",
+    "no_password_saved": "Aucun mot de passe enregistré pour cette connexion"
   },
   "files": {
     "select_connection": "Sélectionnez une connexion",
@@ -208,21 +225,34 @@
     "name": "Nom de la Connexion",
     "name_placeholder": "Ex : Serveur Production",
     "name_required": "Entrez le nom de la connexion",
+    "description": "Description",
+    "description_placeholder": "Description optionnelle...",
     "host": "Hôte",
     "host_placeholder": "192.168.1.100",
     "host_required": "Entrez l'hôte",
+    "port": "Port",
     "user": "Utilisateur",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Entrez l'utilisateur",
+    "connection_type": "Type de Connexion",
     "auth_method": "Méthode d'Authentification",
     "password": "Mot de passe",
     "password_ssh": "Mot de passe SSH",
+    "password_rdp": "Mot de passe Windows",
     "password_keep": "(laisser vide pour conserver)",
     "password_required": "Entrez le mot de passe",
     "private_key": "Clé Privée",
     "key_path": "Chemin de la Clé Privée",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "Entrez le chemin de la clé",
+    "rdp_auth_method": "Authentification RDP",
+    "rdp_credentials": "Identifiants Enregistrés",
+    "rdp_windows_auth": "Authentification Windows",
+    "domain": "Domaine",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "L'utilisateur Windows actuellement connecté sera utilisé pour authentifier la connexion RDP.",
+    "rdp_test_not_available": "Test de connexion non disponible pour RDP. La connexion sera validée lors de la connexion.",
     "auto_connect": "Se connecter automatiquement au démarrage",
     "test_success": "Connexion testée avec succès !",
     "connection_updated": "Connexion mise à jour avec succès !",
@@ -239,7 +269,8 @@
     "command_required": "Entrez une commande",
     "save_tip": "Conseil : Utilisez Ctrl+Entrée pour enregistrer rapidement",
     "snippet_updated": "Extrait mis à jour avec succès",
-    "snippet_created": "Extrait créé avec succès"
+    "snippet_created": "Extrait créé avec succès",
+    "executing": "Exécution de l'extrait : {{name}}"
   },
   "docker": {
     "select_connection": "Sélectionnez une connexion",
@@ -247,7 +278,7 @@
     "not_available": "Docker non disponible",
     "not_available_desc": "Docker n'est pas installé ou n'est pas accessible sur ce serveur.",
     "engine_not_found": "Docker Engine non trouvé",
-    "engine_not_found_hint": "Si ce serveur dispose de Docker, vérifiez que l'utilisateur a les permissions pour accéder à Docker. Essayez d'ajouter l'utilisateur au groupe 'docker' ou vérifiez les privilèges sudo.",
+    "engine_not_found_hint": "Si ce serveur dispose de Docker, vérifiez que l'utilisateur a les permissions pour accéder à Docker.",
     "permission_denied": "Accès Docker refusé",
     "containers": "Conteneurs",
     "container_name": "Nom",
@@ -344,10 +375,16 @@
     "kill_error": "Erreur lors de l'arrêt du conteneur : {{message}}",
     "search_volumes": "Rechercher...",
     "no_volumes_match": "Aucun volume ne correspond",
-    "volume_remove_not_implemented": "La suppression de volumes n'est pas encore implémentée",
+    "volume_remove_confirm_title": "Supprimer le Volume",
+    "volumes_removed_count": "{{count}} volume(s) supprimé(s) avec succès",
+    "volumes_remove_errors": "{{count}} volume(s) n'ont pas pu être supprimés",
+    "volume_remove_selected_count": "{{count}} volume(s) seront supprimés. Cette action est irréversible.",
     "search_networks": "Rechercher...",
     "no_networks_match": "Aucun réseau ne correspond",
-    "network_remove_not_implemented": "La suppression de réseaux n'est pas encore implémentée",
+    "network_remove_confirm_title": "Supprimer le Réseau",
+    "network_remove_selected_count": "{{count}} réseau(x) seront supprimés. Cette action est irréversible.",
+    "networks_removed_count": "{{count}} réseau(x) supprimé(s) avec succès",
+    "networks_remove_errors": "{{count}} réseau(x) n'ont pas pu être supprimés",
     "attachable": "Attachable",
     "ipam_driver": "Pilote IPAM",
     "ipv4_subnet": "Sous-réseau IPV4",
@@ -363,6 +400,46 @@
     "no_stacks_match": "Aucun stack ne correspond",
     "stacks_load_error": "Erreur lors du chargement des stacks",
     "search_stacks": "Rechercher...",
-    "stack_remove_not_implemented": "La suppression de stacks n'est pas encore implémentée"
+    "stack_remove_not_implemented": "La suppression de stacks n'est pas encore implémentée",
+    "deploy": {
+      "new_deploy": "Nouveau Déploiement",
+      "title": "Déployer une Nouvelle Stack",
+      "stack_editor": "Éditeur de Stacks",
+      "stack_editor_desc": "Collez le contenu de votre docker-compose.yml ci-dessous pour déployer une nouvelle stack.",
+      "quick_run": "Exécution Rapide",
+      "quick_run_desc": "Collez une commande docker run et nous la convertirons en Stack Compose.",
+      "stack_name": "Nom de la Stack",
+      "stack_name_placeholder": "mon-app",
+      "stack_name_required": "Le nom de la stack est obligatoire",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "Format YAML invalide",
+      "deploy": "Déployer la Stack",
+      "deploy_as_stack": "Déployer comme Stack",
+      "success": "Stack déployée avec succès !",
+      "deploy_error": "Échec du déploiement de la stack",
+      "docker_run_command": "Commande Docker Run",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "La commande docker run est obligatoire",
+      "invalid_docker_run": "Commande docker run invalide. Elle doit commencer par 'docker run'.",
+      "convert": "Convertir en Compose",
+      "convert_error": "Échec de la conversion de la commande docker run",
+      "converted_compose": "Compose Converti",
+      "use_in_editor": "Utiliser dans l'Éditeur",
+      "no_compose_to_deploy": "Aucun contenu compose à déployer.",
+      "deploy_directory": "Répertoire de déploiement"
+    }
+  },
+  "rdp": {
+    "connecting": "Connexion au Bureau à Distance...",
+    "connection_failed": "Échec de la Connexion",
+    "retry": "Réessayer",
+    "disconnect": "Déconnecter",
+    "fullscreen": "Plein Écran",
+    "exit_fullscreen": "Quitter le Plein Écran",
+    "settings": "Paramètres",
+    "session_active": "Session RDP Active",
+    "session_info": "La session Bureau à Distance a été ouverte dans une fenêtre séparée.",
+    "session_launched": "Session Bureau à Distance lancée pour {{name}}",
+    "launch_failed": "Échec du lancement du Bureau à Distance : {{error}}"
   }
 }
