--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -32,13 +32,27 @@
     "no_connection_selected": "Nessuna connessione selezionata",
     "select_or_create_connection": "Seleziona una connessione esistente o creane una nuova per iniziare.",
     "connect": "Connetti",
+    "launch_rdp": "Apri Desktop Remoto",
     "edit": "Modifica",
     "delete": "Elimina",
     "delete_connection": "Elimina Connessione",
     "confirm_delete_connection": "Sei sicuro di voler eliminare la connessione \"{{name}}\"?",
+    "confirm_delete": "Sei sicuro di voler eliminare questo elemento?",
+    "search": "Cerca",
+    "no_results": "Nessun risultato trovato",
+    "error_loading_snippets": "Errore nel caricamento dei frammenti",
+    "deleted_success": "Eliminato con successo",
     "docker": "Docker",
     "copy": "Copia",
-    "copied": "Copiato negli appunti"
+    "copied": "Copiato negli appunti",
+    "no_available_connections": "Nessuna connessione disponibile",
+    "expand": "Espandi",
+    "collapse": "Comprimi",
+    "search_connections": "Cerca connessioni...",
+    "no_connections_yet": "Nessuna connessione ancora",
+    "connection_deleted": "Connessione eliminata con successo",
+    "active": "Attivo",
+    "disconnect": "Disconnetti"
   },
   "settings": {
     "stacks_directory": "Directory Stack",
@@ -90,7 +104,10 @@
     "select_connection": "Seleziona una connessione",
     "select_connection_desc": "Seleziona una connessione per aprire un terminale.",
     "new_terminal": "Nuovo Terminale",
-    "no_terminal_open": "Nessun terminale aperto"
+    "no_terminal_open": "Nessun terminale aperto",
+    "send_password": "Invia Password",
+    "password_sent": "Password inviata al terminale",
+    "no_password_saved": "Nessuna password salvata per questa connessione"
   },
   "files": {
     "select_connection": "Seleziona una connessione",
@@ -208,21 +225,34 @@
     "name": "Nome Connessione",
     "name_placeholder": "Es: Server Produzione",
     "name_required": "Inserisci il nome della connessione",
+    "description": "Descrizione",
+    "description_placeholder": "Descrizione opzionale...",
     "host": "Host",
     "host_placeholder": "192.168.1.100",
     "host_required": "Inserisci l'host",
+    "port": "Porta",
     "user": "Utente",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Inserisci l'utente",
+    "connection_type": "Tipo di Connessione",
     "auth_method": "Metodo di Autenticazione",
     "password": "Password",
     "password_ssh": "Password SSH",
+    "password_rdp": "Password Windows",
     "password_keep": "(lascia vuoto per mantenere)",
     "password_required": "Inserisci la password",
     "private_key": "Chiave Privata",
     "key_path": "Percorso Chiave Privata",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "Inserisci il percorso della chiave",
+    "rdp_auth_method": "Autenticazione RDP",
+    "rdp_credentials": "Credenziali Salvate",
+    "rdp_windows_auth": "Autenticazione Windows",
+    "domain": "Dominio",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "L'utente Windows attualmente connesso sarà utilizzato per autenticare la connessione RDP.",
+    "rdp_test_not_available": "Test di connessione non disponibile per RDP. La connessione sarà validata durante la connessione.",
     "auto_connect": "Connetti automaticamente all'avvio",
     "test_success": "Connessione testata con successo!",
     "connection_updated": "Connessione aggiornata con successo!",
@@ -239,7 +269,8 @@
     "command_required": "Inserisci un comando",
     "save_tip": "Suggerimento: Usa Ctrl+Invio per salvare velocemente",
     "snippet_updated": "Frammento aggiornato con successo",
-    "snippet_created": "Frammento creato con successo"
+    "snippet_created": "Frammento creato con successo",
+    "executing": "Esecuzione frammento: {{name}}"
   },
   "docker": {
     "select_connection": "Seleziona una connessione",
@@ -247,7 +278,7 @@
     "not_available": "Docker non disponibile",
     "not_available_desc": "Docker non è installato o non è accessibile su questo server.",
     "engine_not_found": "Docker Engine non trovato",
-    "engine_not_found_hint": "Se questo server ha Docker installato, assicurati che l'utente abbia i permessi per accedere a Docker. Prova ad aggiungere l'utente al gruppo 'docker' o verifica i privilegi sudo.",
+    "engine_not_found_hint": "Se questo server ha Docker installato, assicurati che l'utente abbia i permessi per accedere a Docker.",
     "permission_denied": "Accesso Docker negato",
     "containers": "Container",
     "container_name": "Nome",
@@ -344,10 +375,16 @@
     "kill_error": "Errore nella terminazione del container: {{message}}",
     "search_volumes": "Cerca...",
     "no_volumes_match": "Nessun volume corrisponde",
-    "volume_remove_not_implemented": "La rimozione dei volumi non è ancora implementata",
+    "volume_remove_confirm_title": "Rimuovi Volume",
+    "volumes_removed_count": "{{count}} volume/i rimosso/i con successo",
+    "volumes_remove_errors": "{{count}} volume/i non rimosso/i",
+    "volume_remove_selected_count": "{{count}} volume/i verranno rimossi. Questa azione non può essere annullata.",
     "search_networks": "Cerca...",
     "no_networks_match": "Nessuna rete corrisponde",
-    "network_remove_not_implemented": "La rimozione delle reti non è ancora implementata",
+    "network_remove_confirm_title": "Rimuovi Rete",
+    "network_remove_selected_count": "{{count}} rete/i verranno rimosse. Questa azione non può essere annullata.",
+    "networks_removed_count": "{{count}} rete/i rimossa/e con successo",
+    "networks_remove_errors": "{{count}} rete/i non rimossa/e",
     "attachable": "Allegabile",
     "ipam_driver": "Driver IPAM",
     "ipv4_subnet": "Sottorete IPV4",
@@ -363,6 +400,46 @@
     "no_stacks_match": "Nessuno stack corrisponde",
     "stacks_load_error": "Errore nel caricamento degli stack",
     "search_stacks": "Cerca...",
-    "stack_remove_not_implemented": "La rimozione degli stack non è ancora implementata"
+    "stack_remove_not_implemented": "La rimozione degli stack non è ancora implementata",
+    "deploy": {
+      "new_deploy": "Nuovo Deploy",
+      "title": "Distribuisci Nuovo Stack",
+      "stack_editor": "Editor Stack",
+      "stack_editor_desc": "Incolla il contenuto del tuo docker-compose.yml qui sotto per distribuire un nuovo stack.",
+      "quick_run": "Esecuzione Rapida",
+      "quick_run_desc": "Incolla un comando docker run e lo convertiremo in uno Stack Compose.",
+      "stack_name": "Nome Stack",
+      "stack_name_placeholder": "mia-app",
+      "stack_name_required": "Il nome dello stack è obbligatorio",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "Formato YAML non valido",
+      "deploy": "Distribuisci Stack",
+      "deploy_as_stack": "Distribuisci come Stack",
+      "success": "Stack distribuito con successo!",
+      "deploy_error": "Errore nella distribuzione dello stack",
+      "docker_run_command": "Comando Docker Run",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "Il comando docker run è obbligatorio",
+      "invalid_docker_run": "Comando docker run non valido. Deve iniziare con 'docker run'.",
+      "convert": "Converti in Compose",
+      "convert_error": "Errore nella conversione del comando docker run",
+      "converted_compose": "Compose Convertito",
+      "use_in_editor": "Usa nell'Editor",
+      "no_compose_to_deploy": "Nessun contenuto compose da distribuire.",
+      "deploy_directory": "Directory di distribuzione"
+    }
+  },
+  "rdp": {
+    "connecting": "Connessione al Desktop Remoto...",
+    "connection_failed": "Connessione Fallita",
+    "retry": "Riprova",
+    "disconnect": "Disconnetti",
+    "fullscreen": "Schermo Intero",
+    "exit_fullscreen": "Esci da Schermo Intero",
+    "settings": "Impostazioni",
+    "session_active": "Sessione RDP Attiva",
+    "session_info": "La sessione Desktop Remoto è stata aperta in una finestra separata.",
+    "session_launched": "Sessione Desktop Remoto avviata per {{name}}",
+    "launch_failed": "Errore nell'avvio del Desktop Remoto: {{error}}"
   }
 }
