--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -32,13 +32,27 @@
     "no_connection_selected": "接続が選択されていません",
     "select_or_create_connection": "既存の接続を選択するか、新しい接続を作成してください。",
     "connect": "接続",
+    "launch_rdp": "リモートデスクトップを開く",
     "edit": "編集",
     "delete": "削除",
     "delete_connection": "接続を削除",
     "confirm_delete_connection": "接続「{{name}}」を削除してもよろしいですか？",
+    "confirm_delete": "このアイテムを削除してもよろしいですか？",
+    "search": "検索",
+    "no_results": "結果が見つかりません",
+    "error_loading_snippets": "スニペットの読み込みエラー",
+    "deleted_success": "削除しました",
     "docker": "Docker",
     "copy": "コピー",
-    "copied": "クリップボードにコピーしました"
+    "copied": "クリップボードにコピーしました",
+    "no_available_connections": "利用可能な接続がありません",
+    "expand": "展開",
+    "collapse": "折りたたむ",
+    "search_connections": "接続を検索...",
+    "no_connections_yet": "まだ接続がありません",
+    "connection_deleted": "接続を削除しました",
+    "active": "アクティブ",
+    "disconnect": "切断"
   },
   "settings": {
     "stacks_directory": "スタックディレクトリ",
@@ -90,7 +104,10 @@
     "select_connection": "接続を選択",
     "select_connection_desc": "ターミナルを開くには接続を選択してください。",
     "new_terminal": "新規ターミナル",
-    "no_terminal_open": "ターミナルが開いていません"
+    "no_terminal_open": "ターミナルが開いていません",
+    "send_password": "パスワードを送信",
+    "password_sent": "パスワードをターミナルに送信しました",
+    "no_password_saved": "この接続にパスワードが保存されていません"
   },
   "files": {
     "select_connection": "接続を選択",
@@ -208,21 +225,34 @@
     "name": "接続名",
     "name_placeholder": "例：本番サーバー",
     "name_required": "接続名を入力してください",
+    "description": "説明",
+    "description_placeholder": "オプションの説明...",
     "host": "ホスト",
     "host_placeholder": "192.168.1.100",
     "host_required": "ホストを入力してください",
+    "port": "ポート",
     "user": "ユーザー",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "ユーザーを入力してください",
+    "connection_type": "接続タイプ",
     "auth_method": "認証方法",
     "password": "パスワード",
     "password_ssh": "SSHパスワード",
+    "password_rdp": "Windowsパスワード",
     "password_keep": "（維持するには空白のまま）",
     "password_required": "パスワードを入力してください",
     "private_key": "秘密鍵",
     "key_path": "秘密鍵パス",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "鍵のパスを入力してください",
+    "rdp_auth_method": "RDP認証",
+    "rdp_credentials": "保存された資格情報",
+    "rdp_windows_auth": "Windows認証",
+    "domain": "ドメイン",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "現在ログインしているWindowsユーザーがRDP接続の認証に使用されます。",
+    "rdp_test_not_available": "RDPの接続テストは利用できません。接続時に検証されます。",
     "auto_connect": "起動時に自動接続",
     "test_success": "接続テスト成功！",
     "connection_updated": "接続を更新しました！",
@@ -239,7 +269,8 @@
     "command_required": "コマンドを入力してください",
     "save_tip": "ヒント: Ctrl+Enterで素早く保存",
     "snippet_updated": "スニペットを更新しました",
-    "snippet_created": "スニペットを作成しました"
+    "snippet_created": "スニペットを作成しました",
+    "executing": "スニペットを実行中: {{name}}"
   },
   "docker": {
     "select_connection": "接続を選択",
@@ -247,7 +278,7 @@
     "not_available": "Dockerが利用できません",
     "not_available_desc": "Dockerはこのサーバーにインストールされていないか、アクセスできません。",
     "engine_not_found": "Docker Engineが見つかりません",
-    "engine_not_found_hint": "このサーバーにDockerがインストールされている場合、ユーザーがDockerにアクセスする権限を持っていることを確認してください。ユーザーを「docker」グループに追加するか、sudo権限を確認してください。",
+    "engine_not_found_hint": "このサーバーにDockerがインストールされている場合、ユーザーがDockerにアクセスする権限を持っていることを確認してください。",
     "permission_denied": "Dockerへのアクセスが拒否されました",
     "containers": "コンテナ",
     "container_name": "名前",
@@ -344,10 +375,16 @@
     "kill_error": "コンテナの強制終了エラー: {{message}}",
     "search_volumes": "検索...",
     "no_volumes_match": "一致するボリュームがありません",
-    "volume_remove_not_implemented": "ボリュームの削除はまだ実装されていません",
+    "volume_remove_confirm_title": "ボリュームを削除",
+    "volumes_removed_count": "{{count}}個のボリュームを削除しました",
+    "volumes_remove_errors": "{{count}}個のボリュームの削除に失敗しました",
+    "volume_remove_selected_count": "{{count}}個のボリュームが削除されます。この操作は元に戻せません。",
     "search_networks": "検索...",
     "no_networks_match": "一致するネットワークがありません",
-    "network_remove_not_implemented": "ネットワークの削除はまだ実装されていません",
+    "network_remove_confirm_title": "ネットワークを削除",
+    "network_remove_selected_count": "{{count}}個のネットワークが削除されます。この操作は元に戻せません。",
+    "networks_removed_count": "{{count}}個のネットワークを削除しました",
+    "networks_remove_errors": "{{count}}個のネットワークの削除に失敗しました",
     "attachable": "接続可能",
     "ipam_driver": "IPAMドライバー",
     "ipv4_subnet": "IPV4サブネット",
@@ -363,6 +400,46 @@
     "no_stacks_match": "一致するスタックがありません",
     "stacks_load_error": "スタックの読み込みエラー",
     "search_stacks": "検索...",
-    "stack_remove_not_implemented": "スタックの削除はまだ実装されていません"
+    "stack_remove_not_implemented": "スタックの削除はまだ実装されていません",
+    "deploy": {
+      "new_deploy": "新規デプロイ",
+      "title": "新規スタックをデプロイ",
+      "stack_editor": "スタックエディタ",
+      "stack_editor_desc": "docker-compose.ymlの内容を以下に貼り付けて、新しいスタックをデプロイします。",
+      "quick_run": "クイック実行",
+      "quick_run_desc": "docker runコマンドを貼り付けると、Composeスタックに変換します。",
+      "stack_name": "スタック名",
+      "stack_name_placeholder": "my-app",
+      "stack_name_required": "スタック名は必須です",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "無効なYAML形式",
+      "deploy": "スタックをデプロイ",
+      "deploy_as_stack": "スタックとしてデプロイ",
+      "success": "スタックをデプロイしました！",
+      "deploy_error": "スタックのデプロイに失敗しました",
+      "docker_run_command": "Docker Runコマンド",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "docker runコマンドは必須です",
+      "invalid_docker_run": "無効なdocker runコマンドです。'docker run'で始まる必要があります。",
+      "convert": "Composeに変換",
+      "convert_error": "docker runコマンドの変換に失敗しました",
+      "converted_compose": "変換されたCompose",
+      "use_in_editor": "エディタで使用",
+      "no_compose_to_deploy": "デプロイするComposeコンテンツがありません。",
+      "deploy_directory": "デプロイディレクトリ"
+    }
+  },
+  "rdp": {
+    "connecting": "リモートデスクトップに接続中...",
+    "connection_failed": "接続失敗",
+    "retry": "再試行",
+    "disconnect": "切断",
+    "fullscreen": "フルスクリーン",
+    "exit_fullscreen": "フルスクリーンを終了",
+    "settings": "設定",
+    "session_active": "RDPセッションがアクティブ",
+    "session_info": "リモートデスクトップセッションが別のウィンドウで開かれました。",
+    "session_launched": "{{name}}のリモートデスクトップセッションを開始しました",
+    "launch_failed": "リモートデスクトップの起動に失敗しました: {{error}}"
   }
 }
