--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -46,7 +46,7 @@
     "copy": "Copiar",
     "copied": "Copiado para a área de transferência",
     "no_available_connections": "Nenhuma conexão disponível",
-    "expand": "Expand",
+    "expand": "Expandir",
     "collapse": "Recolher",
     "search_connections": "Pesquisar conexões...",
     "no_connections_yet": "Nenhuma conexão ainda",
