--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -32,13 +32,27 @@
     "no_connection_selected": "Keine Verbindung ausgewählt",
     "select_or_create_connection": "Wählen Sie eine bestehende Verbindung aus oder erstellen Sie eine neue.",
     "connect": "Verbinden",
+    "launch_rdp": "Remote-Desktop öffnen",
     "edit": "Bearbeiten",
     "delete": "Löschen",
     "delete_connection": "Verbindung löschen",
     "confirm_delete_connection": "Möchten Sie die Verbindung \"{{name}}\" wirklich löschen?",
+    "confirm_delete": "Möchten Sie dieses Element wirklich löschen?",
+    "search": "Suchen",
+    "no_results": "Keine Ergebnisse gefunden",
+    "error_loading_snippets": "Fehler beim Laden der Snippets",
+    "deleted_success": "Erfolgreich gelöscht",
     "docker": "Docker",
     "copy": "Kopieren",
-    "copied": "In Zwischenablage kopiert"
+    "copied": "In Zwischenablage kopiert",
+    "no_available_connections": "Keine Verbindungen verfügbar",
+    "expand": "Erweitern",
+    "collapse": "Reduzieren",
+    "search_connections": "Verbindungen suchen...",
+    "no_connections_yet": "Noch keine Verbindungen",
+    "connection_deleted": "Verbindung erfolgreich gelöscht",
+    "active": "Aktiv",
+    "disconnect": "Trennen"
   },
   "settings": {
     "stacks_directory": "Stacks-Verzeichnis",
@@ -90,7 +104,10 @@
     "select_connection": "Verbindung auswählen",
     "select_connection_desc": "Wählen Sie eine Verbindung, um ein Terminal zu öffnen.",
     "new_terminal": "Neues Terminal",
-    "no_terminal_open": "Kein Terminal geöffnet"
+    "no_terminal_open": "Kein Terminal geöffnet",
+    "send_password": "Passwort senden",
+    "password_sent": "Passwort an Terminal gesendet",
+    "no_password_saved": "Kein Passwort für diese Verbindung gespeichert"
   },
   "files": {
     "select_connection": "Verbindung auswählen",
@@ -208,21 +225,34 @@
     "name": "Verbindungsname",
     "name_placeholder": "z.B.: Produktionsserver",
     "name_required": "Geben Sie den Verbindungsnamen ein",
+    "description": "Beschreibung",
+    "description_placeholder": "Optionale Beschreibung...",
     "host": "Host",
     "host_placeholder": "192.168.1.100",
     "host_required": "Geben Sie den Host ein",
+    "port": "Port",
     "user": "Benutzer",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Geben Sie den Benutzer ein",
+    "connection_type": "Verbindungstyp",
     "auth_method": "Authentifizierungsmethode",
     "password": "Passwort",
     "password_ssh": "SSH-Passwort",
+    "password_rdp": "Windows-Passwort",
     "password_keep": "(leer lassen zum Beibehalten)",
     "password_required": "Geben Sie das Passwort ein",
     "private_key": "Privater Schlüssel",
     "key_path": "Pfad zum privaten Schlüssel",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "Geben Sie den Schlüsselpfad ein",
+    "rdp_auth_method": "RDP-Authentifizierung",
+    "rdp_credentials": "Gespeicherte Anmeldedaten",
+    "rdp_windows_auth": "Windows-Authentifizierung",
+    "domain": "Domäne",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "Der aktuell angemeldete Windows-Benutzer wird für die RDP-Verbindung verwendet.",
+    "rdp_test_not_available": "Verbindungstest für RDP nicht verfügbar. Die Verbindung wird beim Verbinden validiert.",
     "auto_connect": "Automatisch beim Start verbinden",
     "test_success": "Verbindung erfolgreich getestet!",
     "connection_updated": "Verbindung erfolgreich aktualisiert!",
@@ -239,7 +269,8 @@
     "command_required": "Geben Sie einen Befehl ein",
     "save_tip": "Tipp: Verwenden Sie Strg+Enter zum schnellen Speichern",
     "snippet_updated": "Snippet erfolgreich aktualisiert",
-    "snippet_created": "Snippet erfolgreich erstellt"
+    "snippet_created": "Snippet erfolgreich erstellt",
+    "executing": "Snippet ausführen: {{name}}"
   },
   "docker": {
     "select_connection": "Verbindung auswählen",
@@ -247,7 +278,7 @@
     "not_available": "Docker nicht verfügbar",
     "not_available_desc": "Docker ist auf diesem Server nicht installiert oder nicht zugänglich.",
     "engine_not_found": "Docker Engine nicht gefunden",
-    "engine_not_found_hint": "Wenn auf diesem Server Docker installiert ist, stellen Sie sicher, dass der Benutzer Zugriff auf Docker hat. Versuchen Sie, den Benutzer zur Gruppe 'docker' hinzuzufügen oder überprüfen Sie die sudo-Berechtigungen.",
+    "engine_not_found_hint": "Wenn auf diesem Server Docker installiert ist, stellen Sie sicher, dass der Benutzer Zugriff auf Docker hat.",
     "permission_denied": "Docker-Zugriff verweigert",
     "containers": "Container",
     "container_name": "Name",
@@ -344,10 +375,16 @@
     "kill_error": "Fehler beim Beenden des Containers: {{message}}",
     "search_volumes": "Suchen...",
     "no_volumes_match": "Keine Volumes gefunden",
-    "volume_remove_not_implemented": "Volume-Entfernung noch nicht implementiert",
+    "volume_remove_confirm_title": "Volume entfernen",
+    "volumes_removed_count": "{{count}} Volume(s) erfolgreich entfernt",
+    "volumes_remove_errors": "{{count}} Volume(s) konnten nicht entfernt werden",
+    "volume_remove_selected_count": "{{count}} Volume(s) werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden.",
     "search_networks": "Suchen...",
     "no_networks_match": "Keine Netzwerke gefunden",
-    "network_remove_not_implemented": "Netzwerk-Entfernung noch nicht implementiert",
+    "network_remove_confirm_title": "Netzwerk entfernen",
+    "network_remove_selected_count": "{{count}} Netzwerk(e) werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden.",
+    "networks_removed_count": "{{count}} Netzwerk(e) erfolgreich entfernt",
+    "networks_remove_errors": "{{count}} Netzwerk(e) konnten nicht entfernt werden",
     "attachable": "Anhängbar",
     "ipam_driver": "IPAM-Treiber",
     "ipv4_subnet": "IPV4-Subnetz",
@@ -363,6 +400,46 @@
     "no_stacks_match": "Keine Stacks gefunden",
     "stacks_load_error": "Fehler beim Laden der Stacks",
     "search_stacks": "Suchen...",
-    "stack_remove_not_implemented": "Stack-Entfernung noch nicht implementiert"
+    "stack_remove_not_implemented": "Stack-Entfernung noch nicht implementiert",
+    "deploy": {
+      "new_deploy": "Neues Deployment",
+      "title": "Neuen Stack bereitstellen",
+      "stack_editor": "Stack-Editor",
+      "stack_editor_desc": "Fügen Sie den Inhalt Ihrer docker-compose.yml unten ein, um einen neuen Stack bereitzustellen.",
+      "quick_run": "Schnellausführung",
+      "quick_run_desc": "Fügen Sie einen docker run Befehl ein und wir konvertieren ihn in einen Compose Stack.",
+      "stack_name": "Stack-Name",
+      "stack_name_placeholder": "meine-app",
+      "stack_name_required": "Stack-Name ist erforderlich",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "Ungültiges YAML-Format",
+      "deploy": "Stack bereitstellen",
+      "deploy_as_stack": "Als Stack bereitstellen",
+      "success": "Stack erfolgreich bereitgestellt!",
+      "deploy_error": "Fehler beim Bereitstellen des Stacks",
+      "docker_run_command": "Docker Run Befehl",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "Docker run Befehl ist erforderlich",
+      "invalid_docker_run": "Ungültiger docker run Befehl. Er muss mit 'docker run' beginnen.",
+      "convert": "In Compose konvertieren",
+      "convert_error": "Fehler beim Konvertieren des docker run Befehls",
+      "converted_compose": "Konvertierter Compose",
+      "use_in_editor": "Im Editor verwenden",
+      "no_compose_to_deploy": "Kein Compose-Inhalt zum Bereitstellen.",
+      "deploy_directory": "Bereitstellungsverzeichnis"
+    }
+  },
+  "rdp": {
+    "connecting": "Verbindung zum Remote-Desktop...",
+    "connection_failed": "Verbindung fehlgeschlagen",
+    "retry": "Erneut versuchen",
+    "disconnect": "Trennen",
+    "fullscreen": "Vollbild",
+    "exit_fullscreen": "Vollbild beenden",
+    "settings": "Einstellungen",
+    "session_active": "RDP-Sitzung aktiv",
+    "session_info": "Die Remote-Desktop-Sitzung wurde in einem separaten Fenster geöffnet.",
+    "session_launched": "Remote-Desktop-Sitzung für {{name}} gestartet",
+    "launch_failed": "Fehler beim Starten des Remote-Desktops: {{error}}"
   }
 }
