--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -32,13 +32,27 @@
     "no_connection_selected": "선택된 연결 없음",
     "select_or_create_connection": "기존 연결을 선택하거나 새 연결을 만들어 시작하세요.",
     "connect": "연결",
+    "launch_rdp": "원격 데스크톱 열기",
     "edit": "편집",
     "delete": "삭제",
     "delete_connection": "연결 삭제",
     "confirm_delete_connection": "연결 \"{{name}}\"을(를) 삭제하시겠습니까?",
+    "confirm_delete": "이 항목을 삭제하시겠습니까?",
+    "search": "검색",
+    "no_results": "결과를 찾을 수 없음",
+    "error_loading_snippets": "스니펫 로딩 오류",
+    "deleted_success": "삭제되었습니다",
     "docker": "Docker",
     "copy": "복사",
-    "copied": "클립보드에 복사됨"
+    "copied": "클립보드에 복사됨",
+    "no_available_connections": "사용 가능한 연결 없음",
+    "expand": "펼치기",
+    "collapse": "접기",
+    "search_connections": "연결 검색...",
+    "no_connections_yet": "아직 연결이 없습니다",
+    "connection_deleted": "연결이 삭제되었습니다",
+    "active": "활성",
+    "disconnect": "연결 해제"
   },
   "settings": {
     "stacks_directory": "스택 디렉토리",
@@ -90,7 +104,10 @@
     "select_connection": "연결 선택",
     "select_connection_desc": "터미널을 열려면 연결을 선택하세요.",
     "new_terminal": "새 터미널",
-    "no_terminal_open": "열린 터미널 없음"
+    "no_terminal_open": "열린 터미널 없음",
+    "send_password": "비밀번호 보내기",
+    "password_sent": "비밀번호를 터미널에 보냈습니다",
+    "no_password_saved": "이 연결에 저장된 비밀번호가 없습니다"
   },
   "files": {
     "select_connection": "연결 선택",
@@ -208,21 +225,34 @@
     "name": "연결 이름",
     "name_placeholder": "예: 프로덕션 서버",
     "name_required": "연결 이름을 입력하세요",
+    "description": "설명",
+    "description_placeholder": "선택적 설명...",
     "host": "호스트",
     "host_placeholder": "192.168.1.100",
     "host_required": "호스트를 입력하세요",
+    "port": "포트",
     "user": "사용자",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "사용자를 입력하세요",
+    "connection_type": "연결 유형",
     "auth_method": "인증 방법",
     "password": "비밀번호",
     "password_ssh": "SSH 비밀번호",
+    "password_rdp": "Windows 비밀번호",
     "password_keep": "(유지하려면 비워두세요)",
     "password_required": "비밀번호를 입력하세요",
     "private_key": "개인 키",
     "key_path": "개인 키 경로",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "키 경로를 입력하세요",
+    "rdp_auth_method": "RDP 인증",
+    "rdp_credentials": "저장된 자격 증명",
+    "rdp_windows_auth": "Windows 인증",
+    "domain": "도메인",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "현재 로그인한 Windows 사용자가 RDP 연결 인증에 사용됩니다.",
+    "rdp_test_not_available": "RDP 연결 테스트를 사용할 수 없습니다. 연결 시 검증됩니다.",
     "auto_connect": "시작 시 자동 연결",
     "test_success": "연결 테스트 성공!",
     "connection_updated": "연결이 업데이트되었습니다!",
@@ -239,7 +269,8 @@
     "command_required": "명령어를 입력하세요",
     "save_tip": "팁: Ctrl+Enter로 빠르게 저장",
     "snippet_updated": "스니펫이 업데이트되었습니다",
-    "snippet_created": "스니펫이 생성되었습니다"
+    "snippet_created": "스니펫이 생성되었습니다",
+    "executing": "스니펫 실행 중: {{name}}"
   },
   "docker": {
     "select_connection": "연결 선택",
@@ -247,7 +278,7 @@
     "not_available": "Docker를 사용할 수 없음",
     "not_available_desc": "Docker가 이 서버에 설치되지 않았거나 접근할 수 없습니다.",
     "engine_not_found": "Docker Engine을 찾을 수 없음",
-    "engine_not_found_hint": "이 서버에 Docker가 설치되어 있다면, 사용자가 Docker에 접근할 권한이 있는지 확인하세요. 사용자를 'docker' 그룹에 추가하거나 sudo 권한을 확인해 보세요.",
+    "engine_not_found_hint": "이 서버에 Docker가 설치되어 있다면, 사용자가 Docker에 접근할 권한이 있는지 확인하세요.",
     "permission_denied": "Docker 접근 거부됨",
     "containers": "컨테이너",
     "container_name": "이름",
@@ -272,7 +303,7 @@
     "restart_error": "컨테이너 재시작 오류: {{message}}",
     "remove_error": "컨테이너 삭제 오류: {{message}}",
     "remove_confirm_title": "컨테이너 삭제",
-    "remove_confirm_content": "컨테이너 \"{{name}}\"\uc744(를) 삭제하시겠습니까?",
+    "remove_confirm_content": "컨테이너 \"{{name}}\"을(를) 삭제하시겠습니까?",
     "loading_containers": "컨테이너 로딩 중...",
     "no_containers": "컨테이너를 찾을 수 없음",
     "load_error": "컨테이너 로딩 오류",
@@ -344,10 +375,16 @@
     "kill_error": "컨테이너 강제 종료 오류: {{message}}",
     "search_volumes": "검색...",
     "no_volumes_match": "일치하는 볼륨이 없습니다",
-    "volume_remove_not_implemented": "볼륨 삭제가 아직 구현되지 않았습니다",
+    "volume_remove_confirm_title": "볼륨 삭제",
+    "volumes_removed_count": "{{count}}개의 볼륨이 삭제되었습니다",
+    "volumes_remove_errors": "{{count}}개의 볼륨 삭제 실패",
+    "volume_remove_selected_count": "{{count}}개의 볼륨이 삭제됩니다. 이 작업은 취소할 수 없습니다.",
     "search_networks": "검색...",
     "no_networks_match": "일치하는 네트워크가 없습니다",
-    "network_remove_not_implemented": "네트워크 삭제가 아직 구현되지 않았습니다",
+    "network_remove_confirm_title": "네트워크 삭제",
+    "network_remove_selected_count": "{{count}}개의 네트워크가 삭제됩니다. 이 작업은 취소할 수 없습니다.",
+    "networks_removed_count": "{{count}}개의 네트워크가 삭제되었습니다",
+    "networks_remove_errors": "{{count}}개의 네트워크 삭제 실패",
     "attachable": "연결 가능",
     "ipam_driver": "IPAM 드라이버",
     "ipv4_subnet": "IPV4 서브넷",
@@ -363,6 +400,46 @@
     "no_stacks_match": "일치하는 스택이 없습니다",
     "stacks_load_error": "스택 로딩 오류",
     "search_stacks": "검색...",
-    "stack_remove_not_implemented": "스택 삭제가 아직 구현되지 않았습니다"
+    "stack_remove_not_implemented": "스택 삭제가 아직 구현되지 않았습니다",
+    "deploy": {
+      "new_deploy": "새 배포",
+      "title": "새 스택 배포",
+      "stack_editor": "스택 편집기",
+      "stack_editor_desc": "docker-compose.yml 내용을 아래에 붙여넣어 새 스택을 배포합니다.",
+      "quick_run": "빠른 실행",
+      "quick_run_desc": "docker run 명령어를 붙여넣으면 Compose 스택으로 변환합니다.",
+      "stack_name": "스택 이름",
+      "stack_name_placeholder": "my-app",
+      "stack_name_required": "스택 이름은 필수입니다",
+      "compose_yaml": "Docker Compose YAML",
+      "invalid_yaml": "잘못된 YAML 형식",
+      "deploy": "스택 배포",
+      "deploy_as_stack": "스택으로 배포",
+      "success": "스택이 배포되었습니다!",
+      "deploy_error": "스택 배포 실패",
+      "docker_run_command": "Docker Run 명령어",
+      "docker_run_placeholder": "docker run -d -p 8080:80 --name myapp nginx:latest",
+      "docker_run_required": "docker run 명령어는 필수입니다",
+      "invalid_docker_run": "잘못된 docker run 명령어입니다. 'docker run'으로 시작해야 합니다.",
+      "convert": "Compose로 변환",
+      "convert_error": "docker run 명령어 변환 실패",
+      "converted_compose": "변환된 Compose",
+      "use_in_editor": "편집기에서 사용",
+      "no_compose_to_deploy": "배포할 Compose 내용이 없습니다.",
+      "deploy_directory": "배포 디렉토리"
+    }
+  },
+  "rdp": {
+    "connecting": "원격 데스크톱에 연결 중...",
+    "connection_failed": "연결 실패",
+    "retry": "다시 시도",
+    "disconnect": "연결 해제",
+    "fullscreen": "전체 화면",
+    "exit_fullscreen": "전체 화면 종료",
+    "settings": "설정",
+    "session_active": "RDP 세션 활성",
+    "session_info": "원격 데스크톱 세션이 별도 창에서 열렸습니다.",
+    "session_launched": "{{name}}의 원격 데스크톱 세션이 시작되었습니다",
+    "launch_failed": "원격 데스크톱 시작 실패: {{error}}"
   }
 }
